# YarnDesktopClient

./: .flutter-plugins-dependencies  .gitignore  CMakeLists.txt  LICENSE  README.md  YarnDesktopClient.cpp  YarnDesktopClient.h  default.nix  flake.nix  pubspec.yaml  statuspost.h
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/yarndesktopclient/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
